[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "somesickarchitecture"
version = "0.1.0"
[tool.poetry.dependencies]
fuzzywuzzy = "^0.18.0"
python = "^3.7"
fuzz = "^0.1.1"
[tool.poetry.dev-dependencies]
